assets/css/3-modules/portfolio.sass
div.portfolio-container
  visibility: hidden
  min-height: 100%
  width: 100%
  display: flex
  flex-direction: column

div.filter-container
  width: 100%
  height: 20%
  display: flex
  justify-content: center
  align-items: center

// Item styling!
div.portfolio-item
  display: flex
  width: 30%
  background-size: cover
  background-position: center center
  flex-grow: 1

  @media screen and (max-width: 550px)
    width: 100%

div.expandable
  cursor: pointer

  &:hover .portfolio-item-overlay
    background-color: rgba(60, 60, 60, 0.9)

  &:hover .portfolio-preview-content
    opacity: 1
    transform: translateX(-50%) translateY(-50%) scale(1)

  &:hover .portfolio-head-text
    transform: scale(0.8)
    opacity: 0

div.expanded

  .portfolio-item-overlay
    background-image: none
    background-color: white
    overflow-y: scroll

  .portfolio-head-text
    color: #37474f
    font-size: 50px
    font-family: "Lato", sans-serif
    transition: 1.7s cubic-bezier(0.65, 0.05, 0.36, 1)

  .portfolio-preview-content
    opacity: 1
    top: auto
    bottom: 27%

  .portfolio-desc-text
    font-family: "Lato", sans-serif
    font-size: 22px
    color: slategrey

  .portfolio-expand-icon
    display: none

div.waiting-for-portfolio-content

  .portfolio-head-text
    color: cornflowerblue
    filter: blur(4px)
    transform: scale(0.8) translateY(10px)

  .portfolio-preview-content
    opacity: 0

  .spinner
    opacity: 1

div.portfolio-item-extended-content-container
  position: absolute
  width: 80%
  background-color: white
  top: 100%
  border-radius: 4px
  max-width: 760px
  padding-bottom: 50px

p.portfolio-item-extended-text
  font-family: "Open Sans", sans-serif
  font-size: 15px
  color: #787878

.tooltip-content
  font-family: "Lato", sans-serif
  color: slategray
  font-weight: bold
  font-size: 15px
  /* letter-spacing: 0.3px; */
  text-align: center
  opacity: 0
  transform: translateY(10px) rotate(-5deg)
  transition: 0.4s cubic-bezier(0.65, 0.05, 0.36, 1)

.tooltipped:hover .tooltip-content
  opacity: 1
  transform: translate(0) rotate(0)


.portfolio-item-extended-exit-button
  stroke: rgba(255, 255, 255, 0.68)
  position: fixed
  top: 40px
  // height: 30px
  // width: 30px
  right: 40px
  cursor: pointer
  border: none
  background: none
  z-index: 10

  &:focus
    outline: none

  svg
    height: 20px
    width: 20px
    transform: scale(0.9)
    transition: 0.4s cubic-bezier(0.65, 0.05, 0.36, 1)
    stroke: #B0BEC5

  &:hover
    svg
      transform: scale(1) rotate(90deg) translateX(-10px)
      stroke: #78909C


  &:hover
    stroke: rgba(255, 255, 255, 1)


p.portfolio-desc-text
  font-family: "Open Sans", sans-serif
  color: white
  text-align: center

svg.portfolio-expand-icon
  fill: white

div.portfolio-preview-content
  display: flex
  justify-content: center
  align-items: center
  position: absolute
  flex-direction: column
  transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1)
  opacity: 0
  transform: translateX(-50%) translateY(-50%) scale(0.8)
  left: 50%
  top: 50%
  max-width: 80%

div.portfolio-item-overlay
  display: flex
  flex-direction: column
  background-color: rgba(60, 60, 60, 0.7)
  // height: 100%
  justify-content: center
  align-items: center
  transition: 0.3s ease-in-out
  position: relative
  flex-grow: 1

p.portfolio-head-text, .portfolio-head-icon
  font-family: "Open Sans", sans-serif
  color: white
  font-size: 25px
  transition: 0.3s ease-in-out
  text-align: center

div.items-container
  width: 100%
  display: flex
  margin-left: auto
  margin-right: auto
  background-color: grey
  flex-grow: 1
  justify-content: space-between
  flex-wrap: wrap

// ACKNOWLEDGEMENTS:
// Lightbox expansion technique based off of:
// http://usefulangle.com/post/38/animating-lightbox-with-css-javascript


// Expansion class.
div.portfolio-item-overlay-expand
  position: fixed
  transition: 0.6s cubic-bezier(0.65, 0.05, 0.36, 1)
  animation: expandItem 1s forwards

// Collapse class.
div.portfolio-item-overlay-collapse
  animation: collapseItem 1s cubic-bezier(0.65, 0.05, 0.36, 1)

div.portfolio-item-article

  /* Make sure images don't extend beyond container */
  img
    max-width: 100%

  h1
    font-size: 40px
    font-family: "Lato", sans-serif
    color: #37474f
    line-height: normal
    margin: .67em 0
    font-weight: bold
    text-align: left
    max-width: none

  p
    margin: 0 0 20px 0
    font-family: "Lato"
    color: #455A64
    text-overflow: ellipsis
    font-size: 15px

  h2, h3
    font-size: 30px
    font-family: "Lato"
    color: #37474f

  h3
    font-size: 25px

  a
    color: cornflowerblue

    &:hover
      color: #d89993

  li
    font-family: "Lato"
    color: lightslategray
    font-size: 15px

  blockquote
    border: 1px 0px 0px 0px solid black
    border-left: 2px solid lightslategray
    padding-left: 20px
    box-shadow: 1px solid black
    margin: 0

    p
      color: lightslategrey
      font-size: 13px


// Load spinner animation
// Acknowledgements: http://tobiasahlin.com/spinkit/
.spinner
  width: 70px
  text-align: center
  position: absolute
  margin-top: 40px
  opacity: 0
  transition: 0.4s cubic-bezier(0.65, 0.05, 0.36, 1)



.spinner > div
  width: 11px
  height: 11px
  background-color: cornflowerblue
  border-radius: 100%
  display: inline-block
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both
  animation: sk-bouncedelay 1.4s infinite ease-in-out both

.spinner .bounce1
  -webkit-animation-delay: -0.32s
  animation-delay: -0.32s


.spinner .bounce2
  -webkit-animation-delay: -0.16s
  animation-delay: -0.16s


@-webkit-keyframes sk-bouncedelay

  0%, 80%, 100%
  -webkit-transform: scale(0)

  40%
    -webkit-transform: scale(1.0)


@keyframes sk-bouncedelay

  0%, 80%, 100%
    -webkit-transform: scale(0)
    transform: scale(0)
  40%
    -webkit-transform: scale(1.0)
    transform: scale(1.0)




// Lightbox animations.
@keyframes expandItem
  50%
    width: 100%
    left: 0
    height: 50%
  100%
    width: 100%
    height: 100%
    top: 0
    left: 0


a.filter-option
  -webkit-tap-highlight-color: rgba(0,0,0,0)
  transition-duration: 500ms
  -webkit-transition-timing-function: ease
  transition-timing-function: ease
  color: #1c1c1c
  margin-right: 20px
  position: relative
  text-decoration: none
  font-family: "Muli", sans-serif
  font-size: 20px

  &:before
    content: " "
    position: absolute
    width: 100%
    visibility: hidden
    height: 3px
    left: 0
    bottom: -16px
    background-color: #7da7d9
    transform: scaleX(0)
    -webkit-transform: scaleX(0)
    transition: all 0.3s ease-in-out 0s
    -webkit-transition: all 0.3s ease-in-out 0s

  &:hover
    -webkit-transition-timing-function: ease
    transition-timing-function: ease
    -webkit-transition-duration: 500ms
    transition-duration: 500ms
    color: #7da7d9

  &:hover:before
    visibility: visible
    -webkit-transform: scaleX(1)
    transform: scaleX(1)


@keyframes fadeIn
  from
    opacity: 0
  to
    opacity: 1

@keyframes fadeOut
  from
    opacity: 1
  to
    opacity: 0

